--- a/templates/result.html
+++ b/templates/result.html
@@ -62,7 +62,7 @@
         data: {
             labels: questionCategories,
             datasets: [{
-                data: scores, // Убираем label
+                data: scores,
                 backgroundColor: 'rgba(79, 129, 189, 0.2)',
                 borderColor: 'rgba(79, 129, 189, 1)',
                 borderWidth: 1,
@@ -71,7 +71,7 @@
         },
         options: {
             plugins: {
-                legend: { display: false } // Отключаем легенду
+                legend: { display: false }
             },
             scales: {
                 r: {
@@ -79,6 +79,10 @@
                     max: 5,
                     ticks: {
                         stepSize: 1,
+                        font: {
+                            size: 8 // Увеличенный размер шрифта для оценок
+                        },
+                        color: 'rgba(128, 128, 128, 0.9)', // Серый цвет для оценок
                         callback: function(value) {
                             switch(value) {
                                 case 1: return "Очень плохо";
@@ -89,12 +93,22 @@
                                 default: return value;
                             }
                         }
+                    },
+                    pointLabels: {
+                        font: {
+                            size: 11 // Увеличенный размер шрифта для категорий
+                        },
+                        color: 'rgba(0, 0, 0, 0.9)' // Черный цвет для категорий
                     }
                 }
             }
         }
     });
 </script>
+
+
+
+
 
 <style>
     .img-thumbnail{
